Make logger facility as singleton
- Rename Log to Logger.
- Make Logger as singleton to ease its use across the project.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,7 +8,6 @@ configure_file(src/kaonConfig.h.in kaonConfig.h)
 set(KAON_EXE kaon)
 set(KAON_SRC
     src/main.cpp
-    src/log.cpp
     src/window/xlib_window.cpp)
 add_executable(${KAON_EXE} ${KAON_SRC})
 target_include_directories(${KAON_EXE}
@@ -19,7 +18,7 @@ target_link_libraries(${KAON_EXE} X11 GL GLU)
 # Tests
 if(${BUILD_TESTING})
     set(TEST_LOG_EXE test_log)
-    add_executable(${TEST_LOG_EXE} tests/log.cpp src/log.cpp)
+    add_executable(${TEST_LOG_EXE} tests/log.cpp)
     target_include_directories(${TEST_LOG_EXE} PUBLIC src/)
     target_link_libraries(${TEST_LOG_EXE} gtest)
     add_test(NAME TestLog COMMAND ${TEST_LOG_EXE})
