Add scene and fill it with entities dynamically
- New Entity class is a generic class for different kinds of entities,
  such as visible objects, sounds, triggers, etc.
- Scene is a class that contains all entities, loads them according to
  the input json file (basically kind of game level map). It also uses
  render to display the scene.

Now model and shaders could be loaded from FS.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,7 +9,8 @@ set(KAON_EXE kaon)
 set(KAON_SRC
     src/main.cpp
     src/window/xlib_window.cpp
-    src/render/ogl_render.cpp)
+    src/render/ogl_render.cpp
+    src/scene/scene.cpp)
 add_executable(${KAON_EXE} ${KAON_SRC})
 target_include_directories(${KAON_EXE}
                            PUBLIC ${CMAKE_BINARY_DIR}/
