Introduce Engine class to control Scene/Window/Render

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,6 +8,7 @@ configure_file(src/kaonConfig.h.in kaonConfig.h)
 set(KAON_EXE kaon)
 set(KAON_SRC
     src/main.cpp
+    src/engine/engine.cpp
     src/window/xlib_window.cpp
     src/render/ogl_render.cpp
     src/scene/scene.cpp)
