--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,6 +12,10 @@ set(KAON_SRC
     src/window/xlib_window.cpp
     src/render/ogl_render.cpp
     src/scene/scene.cpp)
+    src/scene/scene.cpp
+    src/scene/loader/model/bin.cpp
+    src/scene/loader/model/obj.cpp
+)
 add_executable(${KAON_EXE} ${KAON_SRC})
 target_include_directories(${KAON_EXE}
                            PUBLIC ${CMAKE_BINARY_DIR}/
